--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,110 @@
 /* Fonts */
 
 @font-face {
-  font-display: swap; 
+  font-display: swap;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/roboto-v32-latin-300.woff2') format('woff2'); 
+  src: url('../fonts/roboto-v32-latin-300.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap; 
+  font-display: swap;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-v32-latin-regular.woff2') format('woff2'); 
+  src: url('../fonts/roboto-v32-latin-regular.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap; 
+  font-display: swap;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/roboto-v32-latin-500.woff2') format('woff2'); 
+  src: url('../fonts/roboto-v32-latin-500.woff2') format('woff2');
 }
 
-
 @font-face {
-  font-display: swap; 
+  font-display: swap;
   font-family: 'Rowdies';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/rowdies-v17-latin-regular.woff2') format('woff2'); 
+  src: url('../fonts/rowdies-v17-latin-regular.woff2') format('woff2');
+}
+
+/* Variables */
+:root {
+  --color-primary-light: #ffffff;
+  --color-primary-dark: #181817;
+  --color-primary-brands: #ff9f0e;
+  --color-secondary-text: #f1f3ff;
+  --color-secondary-subtext: #839aa9;
+}
+
+/* General */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto';
+  font-size: 22px;
+  line-height: 1.5;
+  background-color: var(--color-primary-light);
+  color: var(--color-primary-dark);
+  font-style: normal;
+  box-sizing: border-box;
+}
+
+h2 {
+  font-family: 'Rowdies';
+  font-size: 56px;
+  font-weight: 400;
+  line-height: 1.25;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+
+.container {
+  max-width: 1287px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+/*header*/
+
+.header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  gap: 115px;
+}
+
+.header__menu {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 40px;
 }
