--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
   --color-secondary-text: #f1f3ff;
   --color-secondary-subtext: #839aa9;
   --color-secondary-button: #fcb62a;
+  --color-secondary-card: #f9f9ff;
 }
 
 /* General */
@@ -235,4 +236,119 @@ a {
 
 .Less-talk__button:hover {
   background-color: var(--color-secondary-button);
+}
+
+/*category*/
+
+.category__section {
+  padding-top: 187px;
+}
+
+.category__title {
+  text-align: center;
+  margin-bottom: 48px;
+}
+
+.category__list {
+  display: flex;
+  gap: 24px;
+}
+
+.category__card {
+  padding: 47px 72px;
+  gap: 0px;
+  border-radius: 16px;
+  border: 1px;
+  opacity: 0px;
+  background-color: var(--color-secondary-card);
+}
+
+.category__container {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: row;
+}
+
+.category__text {
+  color: var(--color-primary-brands);
+  font-weight: 600;
+  margin: 0 auto;
+}
+
+.category__more {
+  position: relative;
+}
+
+.category__link {
+  color: var(--color-primary-brands);
+  font-size: 18px;
+  line-height: 1.3;
+  margin-right: 24px;
+  margin-left: 24px;
+}
+
+.category__link::after {
+  content: '';
+  width: 42px;
+  height: 16px;
+  background-image: url(../img/Arrow.png);
+  position: absolute;
+  transform: translate(20%, 30%);
+}
+
+/*customer*/
+
+.customers__section {
+  padding-top: 96px;
+}
+
+.customers__title {
+  text-align: center;
+  margin-bottom: 48px;
+}
+
+.customers__slider {
+  margin-bottom: 48px;
+}
+
+.customers__list {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+
+.customer-card {
+  position: relative;
+  width: 360px;
+}
+
+.customer-card__container {
+  position: absolute;
+  top: 326px;
+  background-color: var(--color-secondary-subtext);
+  padding: 16px 42px;
+  width: 100%;
+  height: 152px;
+  border-radius: 0px 0px 24px 24px;
+}
+
+.customer-card__img {
+  border-radius: 24px;
+  width: 100%;
+}
+
+.customer-card__container-text {
+  text-align: center;
+}
+
+.customer-card__title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.1;
+  color: var(--color-primary-light);
+}
+
+.customer-card__text {
+  font-size: 16px;
+  color: var(--color-primary-light);
 }
